# CheatWatch

./: .gitignore  Cargo.toml  Cheat.txt  Legit.txt  R6_Data.csv  README.md  app.py  main.py  names.txt  openingscreen.py  requirements.txt  second.py  stats.csv  testfigmaimage.py
src/: main.rs  util.rs
static/: styles.css
template/: index.html  login.html
