[package]
name = "zachscrape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
regex = "1.10.6"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
csv = "1.3.0"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"

